# gradupe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: cli.py  lib.py  main.py
src/gradupe/: __init__.py  __main__.py  cli.py  lib.py
