[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".*/"]

[project]
dynamic = ["version", "description"]

name = "gradupe"
readme = "README.md"
keywords = ["image-dedupe", "sobel-gradient"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed"
]
dependencies = [
    "imagesize >=1.4.1",
    "numba >=0.62.1",
    "numpy >=2.2.0,<2.3.0", # opencv maximum
    "opencv-python-headless >=4.12.0,<5.0.0",
    "typer >=0.19.2,<0.20.0"  # pre1.x major
]
requires-python = ">=3.10"

[[project.authors]]
name = "David"
email = "wavim.wu@gmail.com"

[project.scripts]
gradupe = "gradupe.cli:app"

[project.urls]
Repository = "https://github.com/wavim/gradupe"
