[build-system]
requires = ["flit_core >=3.12,<4.0"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".*/"]

[project]
dynamic = ["version", "description"]

name = "gradupe"
readme = "README.md"
keywords = ["image-dedupe", "sobel-gradient"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed"
]
dependencies = [
    "numba >=0.63.1",
    "numpy >=2.2.6,<2.3.0",
    "opencv-python-headless >=4.12.0,<5.0.0",
    "typer >=0.21.1,<0.22.0"
]
requires-python = ">=3.10"

[[project.authors]]
name = "David"
email = "wavim.wu@gmail.com"

[project.scripts]
gradupe = "gradupe.cli:app"

[project.urls]
Repository = "https://github.com/wavim/gradupe"
